gen/TypstGrammarParser.py
# Generated from TypstGrammar.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class TypstGrammarParser ( Parser ):

    grammarFileName = "TypstGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'^T'", "'^top'", "'^(T)'", "'^(top)'", 
                     "'<typst_math_start>'", "'<typst_math_end>'", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "'|'", "<INVALID>", "'\"'", "'_'", "'^'", "';'", "','", 
                     "'.'", "'->'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'<typst_math_accent>'", "'<typst_math_reduce>'", 
                     "'<typst_math_func>'", "'<typst_math_mat>'", "'lim'", 
                     "'log'", "'integral'", "'dif'", "'diff'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "MATH_START", "MATH_END", "WS", "USELESS_SIGN", 
                      "L_PAREN", "R_PAREN", "L_BRACE", "R_BRACE", "L_BRACKET", 
                      "R_BRACKET", "BAR", "EVAL_BAR", "QUOTE", "UNDERSCORE", 
                      "CARET", "SEMICOLON", "COMMA", "PERIOD", "LIM_APPROACH_SYM", 
                      "RELATION_OP", "ADDITIVE_OP", "MP_OP", "POSTFIX_OP", 
                      "ACCENT_OP", "REDUCE_OP", "FUNC", "FUNC_MAT", "FUNC_LIM", 
                      "FUNC_LOG", "FUNC_INTEGRAL", "DIF", "DIFF", "SYMBOL_BASE", 
                      "NUMBER", "ID" ]

    RULE_math = 0
    RULE_relation = 1
    RULE_expr = 2
    RULE_additive = 3
    RULE_mp = 4
    RULE_unary = 5
    RULE_subargs = 6
    RULE_subexpr = 7
    RULE_supexpr = 8
    RULE_subsupexpr = 9
    RULE_subassign = 10
    RULE_supassign = 11
    RULE_subsupassign = 12
    RULE_eval_at = 13
    RULE_transpose = 14
    RULE_postfix_op = 15
    RULE_postfix = 16
    RULE_exp = 17
    RULE_comp = 18
    RULE_group = 19
    RULE_abs_group = 20
    RULE_args = 21
    RULE_mat_args = 22
    RULE_func = 23
    RULE_matrix = 24
    RULE_reduceit = 25
    RULE_lim = 26
    RULE_log = 27
    RULE_integral = 28
    RULE_text = 29
    RULE_accent = 30
    RULE_symbol_base = 31
    RULE_symbol = 32
    RULE_atom = 33

    ruleNames =  [ "math", "relation", "expr", "additive", "mp", "unary", 
                   "subargs", "subexpr", "supexpr", "subsupexpr", "subassign", 
                   "supassign", "subsupassign", "eval_at", "transpose", 
                   "postfix_op", "postfix", "exp", "comp", "group", "abs_group", 
                   "args", "mat_args", "func", "matrix", "reduceit", "lim", 
                   "log", "integral", "text", "accent", "symbol_base", "symbol", 
                   "atom" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    MATH_START=5
    MATH_END=6
    WS=7
    USELESS_SIGN=8
    L_PAREN=9
    R_PAREN=10
    L_BRACE=11
    R_BRACE=12
    L_BRACKET=13
    R_BRACKET=14
    BAR=15
    EVAL_BAR=16
    QUOTE=17
    UNDERSCORE=18
    CARET=19
    SEMICOLON=20
    COMMA=21
    PERIOD=22
    LIM_APPROACH_SYM=23
    RELATION_OP=24
    ADDITIVE_OP=25
    MP_OP=26
    POSTFIX_OP=27
    ACCENT_OP=28
    REDUCE_OP=29
    FUNC=30
    FUNC_MAT=31
    FUNC_LIM=32
    FUNC_LOG=33
    FUNC_INTEGRAL=34
    DIF=35
    DIFF=36
    SYMBOL_BASE=37
    NUMBER=38
    ID=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MathContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MATH_START(self):
            return self.getToken(TypstGrammarParser.MATH_START, 0)

        def relation(self):
            return self.getTypedRuleContext(TypstGrammarParser.RelationContext,0)


        def MATH_END(self):
            return self.getToken(TypstGrammarParser.MATH_END, 0)

        def getRuleIndex(self):
            return TypstGrammarParser.RULE_math

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMath" ):
                listener.enterMath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMath" ):
                listener.exitMath(self)




    def math(self):

        localctx = TypstGrammarParser.MathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_math)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(TypstGrammarParser.MATH_START)
            self.state = 69
            self.relation(0)
            self.state = 70
            self.match(TypstGrammarParser.MATH_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(TypstGrammarParser.ExprContext,0)


        def relation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypstGrammarParser.RelationContext)
            else:
                return self.getTypedRuleContext(TypstGrammarParser.RelationContext,i)


        def RELATION_OP(self):
            return self.getToken(TypstGrammarParser.RELATION_OP, 0)

        def getRuleIndex(self):
            return TypstGrammarParser.RULE_relation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelation" ):
                listener.enterRelation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelation" ):
                listener.exitRelation(self)



    def relation(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TypstGrammarParser.RelationContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_relation, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.expr()
            self._ctx.stop = self._input.LT(-1)
            self.state = 80
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = TypstGrammarParser.RelationContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_relation)
                    self.state = 75
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 76
                    self.match(TypstGrammarParser.RELATION_OP)
                    self.state = 77
                    self.relation(3) 
                self.state = 82
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def additive(self):
            return self.getTypedRuleContext(TypstGrammarParser.AdditiveContext,0)


        def getRuleIndex(self):
            return TypstGrammarParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = TypstGrammarParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.additive(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdditiveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mp(self):
            return self.getTypedRuleContext(TypstGrammarParser.MpContext,0)


        def additive(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypstGrammarParser.AdditiveContext)
            else:
                return self.getTypedRuleContext(TypstGrammarParser.AdditiveContext,i)


        def ADDITIVE_OP(self):
            return self.getToken(TypstGrammarParser.ADDITIVE_OP, 0)

        def getRuleIndex(self):
            return TypstGrammarParser.RULE_additive

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditive" ):
                listener.enterAdditive(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditive" ):
                listener.exitAdditive(self)



    def additive(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TypstGrammarParser.AdditiveContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_additive, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.mp(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 93
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = TypstGrammarParser.AdditiveContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_additive)
                    self.state = 88
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 89
                    self.match(TypstGrammarParser.ADDITIVE_OP)
                    self.state = 90
                    self.additive(3) 
                self.state = 95
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class MpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unary(self):
            return self.getTypedRuleContext(TypstGrammarParser.UnaryContext,0)


        def mp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypstGrammarParser.MpContext)
            else:
                return self.getTypedRuleContext(TypstGrammarParser.MpContext,i)


        def MP_OP(self):
            return self.getToken(TypstGrammarParser.MP_OP, 0)

        def getRuleIndex(self):
            return TypstGrammarParser.RULE_mp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMp" ):
                listener.enterMp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMp" ):
                listener.exitMp(self)



    def mp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = TypstGrammarParser.MpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_mp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.unary()
            self._ctx.stop = self._input.LT(-1)
            self.state = 104
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = TypstGrammarParser.MpContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_mp)
                    self.state = 99
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 100
                    self.match(TypstGrammarParser.MP_OP)
                    self.state = 101
                    self.mp(3) 
                self.state = 106
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class UnaryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADDITIVE_OP(self):
            return self.getToken(TypstGrammarParser.ADDITIVE_OP, 0)

        def unary(self):
            return self.getTypedRuleContext(TypstGrammarParser.UnaryContext,0)


        def postfix(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TypstGrammarParser.PostfixContext)
            else:
                return self.getTypedRuleContext(TypstGrammarParser.PostfixContext,i)


        def getRuleIndex(self):
            return TypstGrammarParser.RULE_unary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnary" ):
                listener.enterUnary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnary" ):
                listener.exitUnary(self)




    def unary(self):

        localctx = TypstGrammarParser.UnaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_unary)
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TypstGrammarParser.ADDITIVE_OP]:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.match(TypstGrammarParser.ADDITIVE_OP)
                self.state = 108
                self.unary()
                pass
            elif token in [TypstGrammarParser.L_PAREN, TypstGrammarParser.L_BRACE, TypstGrammarParser.L_BRACKET, TypstGrammarParser.BAR, TypstGrammarParser.QUOTE, TypstGrammarParser.ACCENT_OP, TypstGrammarParser.REDUCE_OP, TypstGrammarParser.FUNC, TypstGrammarParser.FUNC_MAT, TypstGrammarParser.FUNC_LIM, TypstGrammarParser.FUNC_LOG, TypstGrammarParser.FUNC_INTEGRAL, TypstGrammarParser.SYMBOL_BASE, TypstGrammarParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 109
                        self.postfix()

                    else:
                        raise NoViableAltException(self)
                    self.state = 112 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubargsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNDERSCORE(self):
            return self.getToken(TypstGrammarParser.UNDERSCORE, 0)

        def atom(self):
            return self.getTypedRuleContext(TypstGrammarParser.AtomContext,0)


        def L_PAREN(self):
            return self.getToken(TypstGrammarParser.L_PAREN, 0)

        def args(self):
            return self.getTypedRuleContext(TypstGrammarParser.ArgsContext,0)


        def R_PAREN(self):
            return self.getToken(TypstGrammarParser.R_PAREN, 0)

        def getRuleIndex(self):
            return TypstGrammarParser.RULE_subargs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubargs" ):
                listener.enterSubargs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubargs" ):
                listener.exitSubargs(self)




    def subargs(self):

        localctx = TypstGrammarParser.SubargsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_subargs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(TypstGrammarParser.UNDERSCORE)
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TypstGrammarParser.QUOTE, TypstGrammarParser.ACCENT_OP, TypstGrammarParser.SYMBOL_BASE, TypstGrammarParser.NUMBER]:
                self.state = 117
                self.atom()
                pass
            elif token in [TypstGrammarParser.L_PAREN]:
                self.state = 118
                self.match(TypstGrammarParser.L_PAREN)
                self.state = 119
                self.args()
                self.state = 120
                self.match(TypstGrammarParser.R_PAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubexprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNDERSCORE(self):
            return self.getToken(TypstGrammarParser.UNDERSCORE, 0)

        def atom(self):
            return self.getTypedRuleContext(TypstGrammarParser.AtomContext,0)


        def L_PAREN(self):
            return self.getToken(TypstGrammarParser.L_PAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(TypstGrammarParser.ExprContext,0)


        def R_PAREN(self):
            return self.getToken(TypstGrammarParser.R_PAREN, 0)

        def getRuleIndex(self):
            return TypstGrammarParser.RULE_subexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubexpr" ):
                listener.enterSubexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubexpr" ):
                listener.exitSubexpr(self)




    def subexpr(self):

        localctx = TypstGrammarParser.SubexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_subexpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(TypstGrammarParser.UNDERSCORE)
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TypstGrammarParser.QUOTE, TypstGrammarParser.ACCENT_OP, TypstGrammarParser.SYMBOL_BASE, TypstGrammarParser.NUMBER]:
                self.state = 125
                self.atom()
                pass
            elif token in [TypstGrammarParser.L_PAREN]:
                self.state = 126
                self.match(TypstGrammarParser.L_PAREN)
                self.state = 127
                self.expr()
                self.state = 128
                self.match(TypstGrammarParser.R_PAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SupexprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CARET(self):
            return self.getToken(TypstGrammarParser.CARET, 0)

        def exp(self):
            return self.getTypedRuleContext(TypstGrammarParser.ExpContext,0)


        def L_PAREN(self):
            return self.getToken(TypstGrammarParser.L_PAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(TypstGrammarParser.ExprContext,0)


        def R_PAREN(self):
            return self.getToken(TypstGrammarParser.R_PAREN, 0)

        def getRuleIndex(self):
            return TypstGrammarParser.RULE_supexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSupexpr" ):
                listener.enterSupexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSupexpr" ):
                listener.exitSupexpr(self)




    def supexpr(self):

        localctx = TypstGrammarParser.SupexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_supexpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(TypstGrammarParser.CARET)
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 133
                self.exp()
                pass

            elif la_ == 2:
                self.state = 134
                self.match(TypstGrammarParser.L_PAREN)
                self.state = 135
                self.expr()
                self.state = 136
                self.match(TypstGrammarParser.R_PAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubsupexprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subexpr(self):
            return self.getTypedRuleContext(TypstGrammarParser.SubexprContext,0)


        def supexpr(self):
            return self.getTypedRuleContext(TypstGrammarParser.SupexprContext,0)


        def getRuleIndex(self):
            return TypstGrammarParser.RULE_subsupexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubsupexpr" ):
                listener.enterSubsupexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubsupexpr" ):
                listener.exitSubsupexpr(self)




    def subsupexpr(self):

        localctx = TypstGrammarParser.SubsupexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_subsupexpr)
        try:
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TypstGrammarParser.UNDERSCORE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.subexpr()
                self.state = 141
                self.supexpr()
                pass
            elif token in [TypstGrammarParser.CARET]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.supexpr()
                self.state = 144
                self.subexpr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubassignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNDERSCORE(self):
            return self.getToken(TypstGrammarParser.UNDERSCORE, 0)

        def atom(self):
            return self.getTypedRuleContext(TypstGrammarParser.AtomContext,0)


        def L_PAREN(self):
            return self.getToken(TypstGrammarParser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(TypstGrammarParser.R_PAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(TypstGrammarParser.ExprContext,0)


        def relation(self):
            return self.getTypedRuleContext(TypstGrammarParser.RelationContext,0)


        def getRuleIndex(self):
            return TypstGrammarParser.RULE_subassign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubassign" ):
                listener.enterSubassign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubassign" ):
                listener.exitSubassign(self)




    def subassign(self):

        localctx = TypstGrammarParser.SubassignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_subassign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(TypstGrammarParser.UNDERSCORE)
            self.state = 157
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TypstGrammarParser.QUOTE, TypstGrammarParser.ACCENT_OP, TypstGrammarParser.SYMBOL_BASE, TypstGrammarParser.NUMBER]:
                self.state = 149
                self.atom()
                pass
            elif token in [TypstGrammarParser.L_PAREN]:
                self.state = 150
                self.match(TypstGrammarParser.L_PAREN)
                self.state = 153
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 151
                    self.expr()
                    pass

                elif la_ == 2:
                    self.state = 152
                    self.relation(0)
                    pass


                self.state = 155
                self.match(TypstGrammarParser.R_PAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SupassignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CARET(self):
            return self.getToken(TypstGrammarParser.CARET, 0)

        def exp(self):
            return self.getTypedRuleContext(TypstGrammarParser.ExpContext,0)


        def L_PAREN(self):
            return self.getToken(TypstGrammarParser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(TypstGrammarParser.R_PAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(TypstGrammarParser.ExprContext,0)


        def relation(self):
            return self.getTypedRuleContext(TypstGrammarParser.RelationContext,0)


        def getRuleIndex(self):
            return TypstGrammarParser.RULE_supassign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSupassign" ):
                listener.enterSupassign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSupassign" ):
                listener.exitSupassign(self)




    def supassign(self):

        localctx = TypstGrammarParser.SupassignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_supassign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(TypstGrammarParser.CARET)
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 160
                self.exp()
                pass

            elif la_ == 2:
                self.state = 161
                self.match(TypstGrammarParser.L_PAREN)
                self.state = 164
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 162
                    self.expr()
                    pass

                elif la_ == 2:
                    self.state = 163
                    self.relation(0)
                    pass


                self.state = 166
                self.match(TypstGrammarParser.R_PAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubsupassignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subassign(self):
            return self.getTypedRuleContext(TypstGrammarParser.SubassignContext,0)


        def supassign(self):
            return self.getTypedRuleContext(TypstGrammarParser.SupassignContext,0)


        def supexpr(self):
            return self.getTypedRuleContext(TypstGrammarParser.SupexprContext,0)


        def getRuleIndex(self):
            return TypstGrammarParser.RULE_subsupassign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubsupassign" ):
                listener.enterSubsupassign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubsupassign" ):
                listener.exitSubsupassign(self)




    def subsupassign(self):
